compiler/tests/safety/fail/common/fail_land.jazz
export fn BS2POLVECq(reg u32 b) 
{
 b = 100;
 reg u32 k = 0xfe;
 b &= k;                 // 255

 k = 1;
 if (b != 100){
  while (true) { b += k;}
 }
}
